2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnothello.c, properties.c, othello.c: use the GameClock
	widget.

	* Makefile.am: don't build clock.[ch].

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnothello.c: (set_bg_color): make the grid dashed.
	(load_pixmaps): use GError.

	* properties.c: (load_properties), (reset_properties),
	(save_properties): quick port from gnome_config to gconf.

	* iagno.schemas: new file.

	* Makefile.am: install iagno.schemas.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* iagno.desktop:

	Install into the panel2 menus correctly.
	
2001-11-24  Kevin Vandersloot <kfv101@psu.edu>

	* othello.c, gnothello.c, clock.c: bring back clock
	functionality

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* iagno.desktop: Added traditional Chinese translation.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnothello.c: expugne imlib.

2001-06-03  Juan Pablo Mendoza Mendoza <pablo_juan@yahoo.com>

	* gnothello.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.

2000-09-12  Dan Mueth <d-mueth@uchicago.edu>

        * help/it/Makefile.am: Fixed stylesheet-images/ stuff

2000-05-22  Ian Peters  <itp@gnu.org>

	* help/C/iagno.sgml: work some of my non-existant sgml-fu to make it
	  all work right

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* iagno.desktop: Added Swedish translation.

2000-04-23  Ian Peters  <itp@gnu.org>

	* apparently only have link to the main help document in menu says drake
	* fix email address in about box

2000-04-23  Ian Peters  <itp@gnu.org>

	* make property box load appropriate help pages

2000-04-23  Ian Peters  <itp@gnu.org>

	* added help subdir

Sun Apr 16 22:50:13 2000  George Lebl <jirka@5z.com>

	* gnothello.c: in init_new_game, remove the black_computer_id
	  and white_computer_id timeouts to fix a bug where computer players
	  could be added by starting new games repeatadly

1999-09-25  Ian Peters  <itp@gnu.org>
